tests/should_fail/list_index_oob.nv
module main

// SHOULD FAIL: index out of bounds on a list
let xs = [1, 2, 3]
println(xs[10])
